# mini-agent

./: .gitignore  CODING_AGENT_LEARNING_PATH.md  README.md  pyproject.toml
deepagent/: main.py
scratch/: gemma4_mlx.py
src/core/: llm.py  plan_execute.py
src/rag/: parse.py
src/tools/: example.py
tools/: bash.py  read_file.py  tool_parse.py  write_file.py
